GeneWeb version 3.11
--------------------

* GeneWeb server or CGI (gwd)
  - [19 Dec 00] In update page, changed "add family" into "add
    marriage" because, despite the warning at end of this page, many
    people are mistaken by thinking it was "add a child in a family".

GeneWeb version 3.10
--------------------

* GeneWeb server or CGI (gwd)
  - [14 Dec 00] Added a system of general macros for "sources" and
    "notes". You can define customized variables in the configuration
    file (base.gwf): their values will be replaced in the "sources" and
    in the "notes". The syntax in configuration file is "var_ident=value"
    and in the sources and notes: "%vident;".
  - [03 Dec 00] Fixed bug in Hebrew calendar computation (example: Hebrew
    day was good for Gregorian date 2001-11-30 but incorrect for the following
    day 2001-12-01).
  - [28 Nov 00] Fixed bug: it was possible to create a loop by merging
    somebody with one of his/her ancestor.
  - [25 Nov 00] Small improvements: in update page, added "back" link,
    in "family deleted" page, added link to return to the person.
  - [24 Nov 00] Fixed bug: in automatic merge steps, the data base was
    not locked, risking to corrupt the data base if two persons were making
    changes exactly at the same time.
  - [18 Nov 00] Fixed bug: while updating a person or a family, in
    case of keys (first name/surname/number) conflicts, if there where
    empty spaces (for example the ones of persons to be removed from the
    list), the button "create" supposed to try again with the first free
    number did not work.
  - [16 Nov 00] Fixed bug: in languages with declinations (e.g. German)
    some declinations structures sometimes incorrectly remained in the
    displayed text (e.g. "xx ist ein:d:+em Cousin")
  - [11 Nov 00] When updating, display now a warning in case when the
    person has a sex inconsistent with his/her "relation" (e.g. woman