@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
 <head>
-  <!-- $Id: perso.txt,v 3.11 2000-12-19 19:13:26 ddr Exp $ -->
+  <!-- $Id: perso.txt,v 3.12 2000-12-27 10:50:40 ddr Exp $ -->
   <!-- copyright (c) INRIA -->
   <meta name="ROBOTS" content="NONE">
   <title>
@@ -174,7 +174,12 @@
     %spouse.title;%spouse.dates;
     %if;has_witnesses;
       %sp;([witness/witnesses]w:
-      %foreach;witness;%if;not is_first;, %end;%witness;%end;
+      %foreach;witness;
+        %if;not is_first;, %end;
+	%if;cancel_links;%witness;
+	%else;<a href="%prefix;%witness.access">%witness;</a>%end;
+	%witness.title;%witness.dates;
+      %end;
     )%end;
     %if;are_divorced;, [divorced] %divorce_date;%end;
     %if;are_separated;, [separated]0%end;
